added keywords for seo and checkbox in booking

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -4,6 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Airpost Xpress | {% block title %}{% endblock title %}</title>
+    <meta name="description" content="airpostxpress, Your Ultimate Guide to Courier and Cargo Solutions: Explore our comprehensive resources, services, and insights for the courier and cargo industries. Discover efficient shipping, logistics, and tracking solutions to streamline your operations and deliver excellence.">
+
+    <meta name="keywords" content="airpost, xpress, airpostxpress, airpost xpress, best courier, courier, courier service in rajasthan, best courier service in india, best courier service, cargo service, chandrayan3, moon, mission, tracking, Freight Forwarding, Logistics Solutions, Express Delivery,International Shipping, Parcel Tracking, Supply Chain Management, Air Freight, Ocean Freight, Last-Mile Delivery, Warehousing Solutions, Customs Clearance, E-commerce Shipping, Cross-Border Shipping, Shipping Rates, Same-Day Delivery, fedex, ups, trackon, tirupati, air, post, airpostexpress, express, maruti, madhur, nandan, Courier Services, Cargo Shipping">
+    <meta name="author" content="Airpostxpress">
+
+    <!-- Example: Add a robots meta tag to control indexing (optional) -->
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.airpostxpress.com">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% load static %}
     <link rel="stylesheet" href="{% static 'css\\index.css' %}">
     <link rel="stylesheet" href="{% static 'css\\tracking.css' %}">
@@ -17,7 +27,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <title>Airpost Xpress | {% block title %}{% endblock title %}</title>
 </head>
 
 <body>
