--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -34,7 +34,7 @@
                         readers: ["ean_reader", "upc_reader", "code_128_reader"], // Specify the barcode types you want to scan
                     },
                 });
-                qg.onDetected(function(data) {
+                Quagga.onDetected(function(data) {
                     // Handle the detected barcode result
                     var barcodeResult = data.codeResult.code;
                     document.getElementById("ref_num_search").value = barcodeResult;
