--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -339,7 +339,7 @@
                 inputStream: {
                     name: "Live",
                     type: "LiveStream",
-                    target: document.querySelector("#test"),
+                    target: document.querySelector("#interactive"),
                 },
                 decoder: {
                     readers: ["ean_reader", "upc_reader", "code_128_reader"], // Specify the barcode types you want to scan
