Add start in quagga

--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -354,6 +354,7 @@
                 $('body').removeClass('modal-open');
                 $('.modal-backdrop').remove();
             })
+            Quagga.start();
         };
 
         $('#barcodeModal').on('shown.bs.modal', function() {
