--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block title %}courier{% endblock title %} {% block content %}
+{% extends "base.html" %} {% load static %} {% block title %}Courier{% endblock title %} {% block content %}
 
 <div class="container-fluid div_cont">
     <div class="row tracking_details">
