--- a/api/templates/bulk_label_print.html
+++ b/api/templates/bulk_label_print.html
@@ -305,6 +305,9 @@
                     </tr>
                 </table>
             </div>
+            {% else %}
+            <div class="table-container d-flex" style="margin-left: 55px; margin-bottom: 32px; border: 0px;">
+            </div>
             {% endif %}
         </div>
 
@@ -567,6 +570,9 @@
                         <td colspan="2" style="font-size: 9px; border: 0; text-align: center;"><b>Sign.</b></td>
                     </tr>
                 </table>
+            </div>
+            {% else %}
+            <div class="table-container d-flex" style="margin-left: 55px; margin-bottom: 32px; border: 0px;">
             </div>
             {% endif %}
         </div>
