--- a/api/templates/drs_generate.html
+++ b/api/templates/drs_generate.html
@@ -53,7 +53,9 @@
                             </div>
                             <div class="col-md-4 form-group align-self-center">
                                 <label for="con_name"><b>Consignee Name</b></label>
-                                <input type="text" name="con_name" id="con_name" class="form-control" autocomplete="on">
+                                <input type="text" name="con_name" id="con_name" class="form-control" autocomplete="on" list="con_name_datalist">
+                                <datalist id="con_name_datalist">                              
+                                  </datalist>
                             </div>
                             <!-- <div class="col-md-1 text-center mt-4">
                                 <button type="button" class="btn btn-primary">Add</button>
